2006-01-30  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: exporting trackers to base workspace now includes YAW values.

2005-12-21  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: enabled the 'center-of-mass' drift subtraction ability in the GUI.

2005-11-21  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: minor adjustment to time offset for beads exported to workspace.

2005-11-21  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.fig: cosmetic changes.  added "Close Figures" button.
	* evt_gui.m: same.  fixed bug where exporting all beads to workspace only exported the first bead N times.

2005-11-04  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m:  added export all beads button. added numerical suffix to variable name for individually exported beads.
	* evt_gui.fig: same.
	
2005-10-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt.gui.m:  fixed bug where when removing data before a specified time point resulting in offsetting said data into negative time... very bad.

2005-10-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m:  fixed bug in plotting the radial vector.

2005-10-06  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m:  added drift subration methods: 'linear' for removing the linear drift associated with each bead individually and 'center-of-mass' for removing drift along the center of mass vector. added controls for superimposing magnet log data on top of displacments (not yet fully implemented).  Added controls for displaying displacement data in 'microns' instead of 'pixels.'
	* evt_gui.fig: same.

2005-09-22  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: suppressed debug output mistakenly left in code.
	* evt_gui.fig: minor changes in GUI appearance.

2005-09-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.fig: hopefully fixed the "GUI doesn't work on lower video resolution" problem.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: added a 'plot radial displacement' checkbox.
	* evt_gui.fig: same.
