@@ -1,3 +1,7 @@
+2006-02-03  Jeremy Cribb <jcribb@email.unc.edu>
+	* evt_gui.m: now includes an edit box for setting custom frame rates.
+	* evt_gui.fig: same.
+
 2006-01-30  Jeremy Cribb <jcribb@email.unc.edu>
 	* evt_gui.m: exporting trackers to base workspace now includes YAW values.
 
